added basic sections

--- a/Main.html
+++ b/Main.html
@@ -3,48 +3,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" >
     <title>My Portfolio</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-    </header>
-
-    <main>
-        <section id="about">
-            <h1>Hi, I'm John Doe</h1>
-            <p>I'm a software developer with a passion for creating visually appealing and user-friendly applications. My experience spans across various industries, including finance, healthcare, and e-commerce. If you have any questions or would like to collaborate, feel free to get in touch.</p>
-        </section>
-
-        <section id="projects">
-            <h2>Featured Projects</h2>
-            <div class="project-container">
-                <div class="project">
-                    <img src="project1.jpg" alt="Project 1">
-                    <h3>Project 1</h3>
-                    <p>Project 1 description</p>
-                </div>
-                <div class="project">
-                    <img src="project2.jpg" alt="Project 2">
-                    <h3>Project 2</h3>
-                    <p>Project 2 description</p>
-                </div>
-                <div class="project">
-                    <img src="project3.jpg" alt="Project 3">
-                    <h3>Project 3</h3>
-                    <p>Project 3 description</p>
-                </div>
-            </div>
-        </section>
-
+    <!-- - main container start -->
+    <div class="maincontainer">
+        <!-- aside container start-->
+        <div class="aside" >
+            aside
+        </div>
+        <!-- aside container end-->
+        <!-- main container start-->
+        <div class="main-content">
+            <!-- about section start -->
+            about
+            <section id="about">
+                <h1 id="myname">Hi, I'm Nikhil_yadav !!</h1>
+                <p>I am your fellow student currently learning Cyber and Digital science.</p>
+            </section>
+            <!-- about sectio ends -->
+        </div>
+        <!-- contact section starts -->
         <section id="contact">
             <h2>Get in Touch</h2>
             <form>
@@ -60,11 +44,17 @@
                 <button type="submit">Send</button>
             </form>
         </section>
-    </main>
+        <!-- contact section ends  -->
+        <!-- main container ends -->
+    </div>
+    <!--- main container End -->
 
     <footer>
-        <p>&copy; 2022 John Doe. All rights reserved.</p>
+        <p>&copy; 2023 nikhil-yadav. All rights reserved.</p>
     </footer>
+
+    <script src="script.js" defer></script>
+
 </body>
 
 </html>
