--- a/Test1/Main.html
+++ b/Test1/Main.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -18,6 +19,13 @@
             <div>
                 <a href="#" class="logo"><span>a</span>tlas</a>
             </div>
+            <ul class="nav">
+                <li><a href="#" class="active" ><i class="fa fa-home"></i>home</a></li>
+                <li><a href="#" ><i class="fa fa-user"></i>about</a></li>
+                <li><a href="#" ><i class="fa fa-list"></i>services</a></li>
+                <li><a href="#" ><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#" ><i class="fa fa-comments"></i>contact</a></li>
+            </ul>
         </div>
         <!-- aside container end-->
         <!-- main container start-->
