--- a/Responsive portfolio site/index.html
+++ b/Responsive portfolio site/index.html
@@ -6,31 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
     <title>Personal Portfolio Website by nick</title>
   </head>
-  <body>
+  <body class="light">
     <nav>
       <div class="nav__content">
-        <div class="logo"><i class="ri-ancient-pavilion-fill"></i><a href="#">Avalon</a></div>
+        <div class="logo"><i class="ri-angularjs-fill"></i><a
+            href="#">Avalon</a></div>
         <label for="check" class="checkbox">
           <i class="ri-menu-line"></i>
         </label>
         <input type="checkbox" name="check" id="check" />
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Resume</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <!-- <li><a href="resume.html">Resume</a></li> -->
+          <li><a href="photos.html">Photos</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
     <section class="section">
       <div class="section__container">
         <div class="content">
+          <section class="theme-switch-section">
+            <!-- Theme switch label -->
+            <label for="theme-switch" class="theme-switch">
+                <input type="checkbox" id="theme-switch" class="theme-checkbox">
+                <i class="ri-sun-fill"></i>
+                <i class="ri-moon-line"></i>
+            </label>
+        </section>
           <p class="subtitle">HELLO...!!</p>
           <h1 class="title" id="myname">
             I'm nikhil-yadav
@@ -44,13 +52,13 @@
             responsive Code.
           </p>
         </div>
-        <div class="image">
+        <div class="image-profile">
           <img src="assets/profile.jpg" alt="profile" />
         </div>
       </div>
     </section>
     <footer>
-        <p>&copy; 2023 nikhil-yadav. All rights reserved.</p>
+      <p>&copy; 2023 nikhil-yadav. All rights reserved.</p>
     </footer>
 
     <script src="script.js" defer></script>
