some little tweaks

--- a/Responsive portfolio site/index.html
+++ b/Responsive portfolio site/index.html
@@ -47,7 +47,7 @@
             Cyber and Digital science student
           </h1>
           <p class="description">
-            Welcome to my web developer portfolio! I'm Nikhil, a unskilled and
+            Welcome to my web portfolio! I'm Nikhil, a unskilled and
             creative web developer with a passion for creating beautiful,
             responsive Code.
           </p>
