--- a/Responsive portfolio site/contact.html
+++ b/Responsive portfolio site/contact.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
-            rel="stylesheet" />
-        <link rel="stylesheet" href="styles.css" />
-        <title>Personal Portfolio Website by nick</title>
-    </head>
-    <body class="light">
-        <nav>
-            <div class="nav__content">
-                <div class="logo"><i class="ri-angularjs-fill"></i><a
-                        href="#">Avalon</a></div>
-                <!-- Theme switch label -->
 
-                <label for="check" class="checkbox">
-                    <i class="ri-menu-line"></i>
-                </label>
-                <input type="checkbox" name="check" id="check" />
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <!-- <li><a href="resume.html">Resume</a></li> -->
-                    <li><a href="photos.html">Photos</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Contact - Personal Portfolio</title>
+</head>
+
+<body class="light">
+    <nav>
+        <div class="nav__content">
+            <div class="logo"><i class="ri-angularjs-fill"></i><a href="#">Avalon</a></div>
+            <label for="check" class="checkbox">
+                <i class="ri-menu-line"></i>
+            </label>
+            <input type="checkbox" name="check" id="check" />
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <!-- <li><a href="resume.html">Resume</a></li> -->
+                <li><a href="photos.html">Photos</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <section class="section">
+        <div class="section__container">
+            <div class="content">
+                <h2>Contact Me</h2>
+                <p>Feel free to reach out to me using the form below:</p>
+                <form>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+
+                    <button type="submit">Send</button>
+                </form>
             </div>
-        </nav>
-        <section class="section">
-            <div class="section__container">
-                <div class="content">
+        </div>
+    </section>
+    <footer>
+        <p>&copy; 2023 nikhil-yadav. All rights reserved.</p>
+    </footer>
 
-                </div>
-            </div>
-        </section>
-        <footer>
-            <p>&copy; 2023 nikhil-yadav. All rights reserved.</p>
-        </footer>
+    <script src="script.js" defer></script>
+</body>
 
-        <script src="script.js" defer></script>
-    </body>
 </html>
