--- a/Responsive portfolio site/contact.html
+++ b/Responsive portfolio site/contact.html
@@ -51,7 +51,7 @@
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" required>
 
-                        <button type="submit">Send</button>
+                        <button type="submit">Submit</button>
                     </div>
                 </div>
             </div>
